<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Minimal</string>
    <string name="action_settings">Settings</string>
    <string name="no_to_dos">You don\'t have any todos</string>
    <string name="title">Title</string>
    <string name="remind_me">Remind Me</string>
    <string name="choose_date">Date</string>
    <string name="choose_time">Time</string>
    <string name="remind_date_and_time">Reminder set for %1$s, %2$s %3$s</string>
    <string name="about">About</string>
    <string name="app_version">Version: %1$s</string>
    <string name="contact_me">You can contact me at</string>
    <string name="made_by">Made by Avjinder</string>
    <string name="done_label">Done</string>
    <string name="date_reminder_default">Today</string>
    <string name="date_error_check_again">The date you entered is in the past.</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_on_summary">Night mode is on</string>
    <string name="night_mode_off_summary">Night mode is off</string>

    <string-array name="snooze_options">
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>

    <string name="snooze">Snooze</string>
    <string name="remove">Remove</string>
    <string name="todo_error">Please enter a Todo</string>

    <string name="proof_of_payment">Proof of Payment</string>
    <string name="no_terminal">Payment without card terminal</string>
    <string name="user_consent">I CONFIRM TO PAY THE ABOVE TOTAL AMOUNT IN ACCORDANCE WITH THE CARD PROVIDER\'S AGREEMENT.</string>
    <string name="merchant_id">Merchant ID:</string>
    <string name="transaction_id">Transaction ID:</string>
    <string name="terminal_id">Terminal ID:</string>
    <string name="receipt_no">Receipt No. :</string>
    <string name="pay">Make Payment</string>
    <string name="product_name">Product Name:</string>
    <string name="product_name_hint">Taxi Ride</string>
    <string name="price">Price:</string>
    <string name="price_hint">1.2</string>
    <string name="euro">€</string>
    <string name="tip">Tipping:</string>
    <string name="tip_hint">0.1</string>
    <string name="total_amount">Total Amount:</string>
    <string name="fill_required_fields">Please fill product name and price fields!</string>
    <string name="card_digits">**** **** **** %s</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment">SumUp Payment</string>
    <string name="add_todo">Add ToDo</string>
    <string name="back">Back</string>
    <string name="transaction_receipt">Receipt of Transaction</string>
    <string name="invalid_price_value">Price must be at least 1 Euro!</string>
</resources>
