<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/payment_details" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="2.75">

            <TableRow
                android:layout_marginTop="8dp"
                android:weightSum="4">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.75"
                    android:text="@string/product_name" />

                <EditText
                    android:id="@+id/product_title"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.25"
                    android:hint="@string/product_name_hint"
                    android:inputType="text"
                    android:nextFocusForward="@id/price" />
            </TableRow>

            <TableRow
                android:layout_marginTop="4dp"
                android:weightSum="4">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.75"
                    android:text="@string/price" />

                <EditText
                    android:id="@+id/price"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:hint="@string/price_hint"
                    android:inputType="numberDecimal" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:text="@string/euro" />
            </TableRow>

            <TableRow
                android:layout_marginTop="8dp"
                android:weightSum="4">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.75"
                    android:text="@string/tip" />

                <EditText
                    android:id="@+id/tipping"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.25"
                    android:hint="@string/tip_hint"
                    android:inputType="numberDecimal"
                    android:nextFocusForward="@id/price" />
            </TableRow>

            <TableRow
                android:layout_marginTop="8dp"
                android:weightSum="4">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.75"
                    android:text="@string/total_amount" />

                <TextView
                    android:id="@+id/total_amount"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="1.32" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:text="@string/euro" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/payment_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0"
            android:text="@string/pay"
            app:backgroundTint="?attr/colorAccent"
            app:cornerRadius="10dp" />

    </LinearLayout>
</layout>